<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <TextView
        android:id="@+id/anim_tv"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:gravity="center_horizontal"
        android:text="@string/anim"
        android:textSize="30sp" />

    <RelativeLayout
        android:id="@+id/line1"
        android:layout_width="match_parent"
        android:layout_height="60dp"
        android:layout_below="@+id/anim_tv"
        android:layout_marginTop="10dp">

        <Button
            android:id="@+id/anim_alpha"
            android:layout_width="150dp"
            android:layout_height="60dp"
            android:layout_alignParentStart="true"
            android:layout_marginHorizontal="30dp"
            android:layout_marginVertical="5dp"
            android:text="@string/anim_alpha" />

        <Button
            android:id="@+id/anim_rotation"
            android:layout_width="150dp"
            android:layout_height="60dp"
            android:layout_alignParentEnd="true"
            android:layout_marginHorizontal="30dp"
            android:layout_marginVertical="5dp"
            android:text="@string/anim_rotation" />
    </RelativeLayout>

    <RelativeLayout
        android:id="@+id/line2"
        android:layout_width="match_parent"
        android:layout_height="60dp"
        android:layout_below="@+id/line1">

        <Button
            android:id="@+id/anim_transX"
            android:layout_width="150dp"
            android:layout_height="60dp"
            android:layout_alignParentStart="true"
            android:layout_marginHorizontal="30dp"
            android:layout_marginVertical="5dp"
            android:text="@string/anim_transX" />

        <Button
            android:id="@+id/anim_transY"
            android:layout_width="150dp"
            android:layout_height="60dp"
            android:layout_alignParentEnd="true"
            android:layout_marginHorizontal="30dp"
            android:layout_marginVertical="5dp"
            android:text="@string/anim_transY" />
    </RelativeLayout>

    <RelativeLayout
        android:id="@+id/line3"
        android:layout_width="match_parent"
        android:layout_height="60dp"
        android:layout_below="@+id/line2">

        <Button
            android:id="@+id/anim_rotaX"
            android:layout_width="150dp"
            android:layout_height="60dp"
            android:layout_marginHorizontal="30dp"
            android:layout_marginVertical="5dp"
            android:text="@string/anim_rotaX" />

        <Button
            android:id="@+id/anim_rotaY"
            android:layout_width="150dp"
            android:layout_height="60dp"
            android:layout_alignParentEnd="true"
            android:layout_marginHorizontal="30dp"
            android:layout_marginVertical="5dp"
            android:text="@string/anim_rotaY" />
    </RelativeLayout>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="60dp"
        android:layout_below="@+id/line3">

        <Button
            android:id="@+id/anim_scaleX"
            android:layout_width="150dp"
            android:layout_height="60dp"
            android:layout_marginHorizontal="30dp"
            android:layout_marginVertical="5dp"
            android:text="@string/anim_scaleX" />

        <Button
            android:id="@+id/anim_scaleY"
            android:layout_width="150dp"
            android:layout_height="60dp"
            android:layout_alignParentEnd="true"
            android:layout_marginHorizontal="30dp"
            android:layout_marginVertical="5dp"
            android:text="@string/anim_scaleY" />
    </RelativeLayout>

    <ImageView
        android:id="@+id/pic"
        android:layout_width="160dp"
        android:layout_height="157dp"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="120dp"
        android:src="@drawable/longzhu" />
</RelativeLayout>